--- a/params/bluerov2_ekf.yaml
+++ b/params/bluerov2_ekf.yaml
@@ -139,7 +139,7 @@ imu0: /BlueRov2/imu/data/ENU
 imu0_config: [false, false, false,
               true,  true,  true,
               false, false, false,
-              true,  true,  true,
+              false, false, false,
               false, false, false]
 imu0_nodelay: false
 imu0_differential: false
@@ -172,7 +172,7 @@ stamped_control: false
 # The last issued control command will be used in prediction for this period. Defaults to 0.2.
 control_timeout: 0.2
 # Which velocities are being controlled. Order is vx, vy, vz, vroll, vpitch, vyaw.
-control_config: [true, false, false, false, false, true]
+control_config: [true, true, true, true, true, true]
 # Places limits on how large the acceleration term will be. Should match your robot's kinematics.
 acceleration_limits: [1.3, 0.0, 0.0, 0.0, 0.0, 3.4]
 # Acceleration and deceleration limits are not always the same for robots.
